<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/tableRow1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stock_symbol_prompt"
            android:id="@+id/stockSymbolTextView" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/stockSymbolEditText"
            android:ems="10"
            android:inputType="text"
            android:layout_weight="1">

            <requestFocus />
        </EditText>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stock_symbol_enter"
            android:id="@+id/stockSymbolButton" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/tabl3eRow2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/egg_shell"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/listHeaderTextView"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/stock_symbol_list_header"
            android:layout_gravity="center_horizontal"
            android:padding="5dp"
            android:textColor="@color/black"
            android:textSize="@dimen/stock_list_text_size"
            android:layout_column="0"
            android:gravity="center_horizontal" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/tableRow3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/egg_shell"
        android:layout_weight="1"
        android:orientation="horizontal">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/stockScrollView"
            android:layout_span="3"
            android:padding="5dp">

            <TableLayout
                android:id="@+id/stockTableScrollView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:stretchColumns="yes" />

        </ScrollView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tableRow4"
        android:orientation="horizontal" >


        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/delete_all_symbols"
            android:id="@+id/deleteSymbolsButton"
            android:layout_column="0"
            android:layout_span="3" />
    </LinearLayout>

</LinearLayout>
